# postgis-sqlite-bridge

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aggregates.rs  casts.rs  lib.rs  operators.rs  preprocessors.rs  registry.rs  scalars.rs  spatial_indexes.rs  system_catalog.rs  table_functions.rs  types.rs  window_functions.rs
