[package]
name = "postgis-sqlite-bridge"
version = "0.1.0"
edition = "2021"
description = "Generated SQLite extension that bridges the postgis DataFission shim into SQLite."
license = "Apache-2.0"

[lib]
# `cdylib` is the loadable-extension shape SQLite's `.load`
# expects. `lib` is kept so the inner modules are also
# unit-testable.
name = "postgis_sqlite_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Path-deps into the source DataFission tree so we can call
# the loader's wasm scalar-invoke surface directly. Move to
# git-deps when DataFission ships releases.
datafission-df-plugin-loader = { path = "../datafission/crates/df-plugin-loader" }
datafission-df-plugin-api    = { path = "../datafission/crates/df-plugin-api" }
datafission-functions        = { path = "../datafission/crates/functions" }
datafission-types            = { path = "../datafission/crates/types" }

# rusqlite's `loadable_extension` feature provides the
# `Connection::extension_init2` entry-point helper; no
# bundled libsqlite (the extension links against the host
# SQLite at load time).
rusqlite = { version = "0.32", features = ["loadable_extension", "functions", "vtab"] }

anyhow     = "1"
once_cell  = "1"
parking_lot = "0.12"
tracing    = "0.1"
serde_json = "1"

[profile.release]
lto         = true
codegen-units = 1
opt-level   = "z"
strip       = true
